@@ -1,5 +1,6 @@
 Changelog for GitPackageManagement.
 
+- Fix setting description for TVs
 - Fix setting output properties for TVs
 
 GitPackageManagement 0.11.0 alpha
